(feat): add googlemaps; (WIP) add route logic

--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Chalo assignment"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -40,4 +43,8 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+      <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAWshrSlfc_0dvnBmVV-um5RoqkT5_MgoE&callback=initMap&v=weekly"
+      defer
+    ></script>
 </html>
