(feat): add edit, delete, upload, import functionality; (enhc): update dialog ui

--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
     -->
   </body>
       <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAWshrSlfc_0dvnBmVV-um5RoqkT5_MgoE&callback=initMap&v=weekly"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAWshrSlfc_0dvnBmVV-um5RoqkT5_MgoE&v=weekly"
       defer
     ></script>
 </html>
